--- a/style.sass
+++ b/style.sass
@@ -579,6 +579,20 @@ button, select, input, textarea
   &--paddingless
     padding: 0
 //======================================= CUSTOM COMPONENTS =======================================
+// Logs Table
+.logs
+  margin-top: 1rem
+  text-align: left
+  
+  th
+    padding-bottom: 1rem
+  td
+    border-top: 1px solid #777
+    padding-top: 1rem
+    padding-bottom: 1rem
+  td, th
+    padding-right: 2rem 
+    
 
 // USER MODAL TABLE
 .user_modal__table
